Fix for mobile y overflow when hb menu is open

--- a/style.css
+++ b/style.css
@@ -476,7 +476,7 @@ html {
     fill: #2c2c2c; }
 
 .freezeY {
-  overflow-y: hidden; }
+  overflow: hidden; }
   .freezeY #main {
     -webkit-filter: blur(5px);
     -moz-filter: blur(5px);
